--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: 5.12.0
     hooks:
     - id: isort
+      args: ["--profile", "black", "--filter-files"]
       name: isort (python)
       stages: [commit]
 -   repo: https://github.com/ambv/black
