--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.6.0
 anyio==3.7.1
+astmonkey==0.3.6
 astroid==3.0.1
 bcrypt==4.0.1
 black==23.10.0
@@ -33,6 +34,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 mccabe==0.7.0
+MutPy==0.6.1
 mypy-extensions==1.0.0
 nodeenv==1.8.0
 orjson==3.9.9
@@ -51,8 +53,10 @@ pydantic==2.4.2
 pydantic_core==2.10.1
 pydantic-extra-types==2.1.0
 pydantic-settings==2.0.3
+pydot==1.4.2
 pyflakes==3.1.0
 pylint==3.0.2
+pyparsing==3.1.1
 pytest==7.4.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
@@ -65,6 +69,7 @@ six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.22
 starlette==0.27.0
+termcolor==2.4.0
 tomli==2.0.1
 tomlkit==0.12.1
 typing_extensions==4.8.0
